--- a/paint.html
+++ b/paint.html
@@ -10,24 +10,25 @@
         <link rel="stylesheet" href="/styles.css" />
         <title> My Paint App </title>
     </head>
-    <body>
+    <body  style="background-color: #ebf8e1">
         <header class="jumbotron ">
             <div class="container-fluid">
                 <div class="row">
-                    <div class='col col-2'>
+                    <div class='col-xs-12 col-lg-4'>
                         <h1> Paint App </h1>
                     </div>
-                    <nav class="container navbar navbar-expand-sm h4 navbar-light justify-content-end">
+                    <nav class="container navbar navbar-expand-sm h5 navbar-light justify-content-end d-none d-lg-block">
                         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="row">
                             <div class="collapse navbar-collapse " id="navbar" >
                                 <ul class="navbar-nav ml-auto">
-                                    <li class="nav-item active "> <a class="nav-link mr-5" href="/#home" >Home </a></li>
-                                    <li class="nav-item"> <a class="nav-link mr-5" href="/#app"> Start Painting </a></li>
-                                    <li class="nav-item"> <a class="nav-link mr-5" href="/#description">Description </a></li>
-                                    <li class="nav-item"> <a class="nav-link mr-5" href="/#contactme">Contact Me</a></li>
+                                    <li class="nav-item active "> <a class="nav-link mr-3" href="/#home" >Home </a></li>
+                                    <li class="nav-item"> <a class="nav-link mr-3" href="/paint.html"> Start Painting </a></li>
+                                    <li class="nav-item"> <a class="nav-link mr-3" href="/#description">Description </a></li>
+                                    <li class="nav-item"> <a class="nav-link mr-3" href="/#demo">Demo </a></li>
+                                    <li class="nav-item"> <a class="nav-link" href="/#developer">Contact Me</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -36,26 +37,26 @@
             </div>
         </header>
 
-        <div class="container">
+        <div class="container pb-5">
             <div class="row justify-content-center mb-5 pt-5">
                 <h2> Paint Something Colorful </h2>
             </div>
             <div class="row justify-content-center">
-                <h5> Pick the brush size </h5>
+                <h4> Pick the brush size </h4>
             </div>
             <div class="row justify-content-center mb-5">
-                <button class="btn brush smalldot" onClick="brushSize(2)">
+                <button class="btn brush smalldot" onClick="brushSize(3)">
                     <i class="fa fa-1x fa-solid fa-circle"></i>
                 </button>
-                <button class="btn ml-5 mr-5 brush" onClick="brushSize(10)">
+                <button class="btn ml-5 mr-5 brush" onClick="brushSize(15)">
                     <i class="fa fa-lg fa-solid fa-circle"></i>
                 </button>
-                <button class="btn brush" onClick="brushSize(20)">
+                <button class="btn brush" onClick="brushSize(30)">
                     <i class="fa fa-2x fa-solid fa-circle"></i>
                 </button>
             </div>
             <div class="row justify-content-center">
-                <h5> Pick your stamps </h5>
+                <h4> Pick your stamps </h4>
             </div>
             <div class="row justify-content-around mb-5">
                 <div class="stampimage" >
@@ -65,7 +66,7 @@
                     <img onClick="getImage('images/bird.png')" src="images/bird.png" width="50" height="50" />
                 </div>
                 <div class="stampimage">
-                    <img onClick="getImage('images/clouds.jpg')" src="images/clouds.jpg" width="50" height="50" />
+                    <img onClick="getImageBig('images/clouds.jpg')" src="images/clouds.jpg" width="50" height="50" />
                 </div>
                 <div class="stampimage" >
                     <img onClick="getImageBig('images/santa.jpg')" src="images/santa.jpg" width="50" height="50" />
@@ -94,10 +95,17 @@
                     <img onClick="saveImage()" src="images/save.jpg" width="50" height="50" class="ml-5" />
             </div>
             </div>
-            <div class="row justify-content-center mb-5">
-                <canvas id="draw" width="800" height="800"></canvas>
+            <div class="row justify-content-center pb-5">
+                <canvas id="draw" ></canvas>
             </div>
         </div>
+
+        <footer class="container-fluid ">
+            <div class="row justify-content-center mx-auto">
+            <h5 style="color:grey"> Minchao Duclos | Front End Developer | Seattle, WA, USA | <script>document.write(new Date().getFullYear())</script></h5>
+            </div>
+        </footer>
+
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
