--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class='row justify-content-center'>
                 <video width="1000" height="700" controls>
-                    <source src="/images/demo3.mp4" type="video/mp4">
+                    <source src="/images/demo.mp4" type="video/mp4">
                 </video>
             </div>
 
